bug fix for group customize interface on firefox

--- a/components/com_groups/assets/css/groups.css
+++ b/components/com_groups/assets/css/groups.css
@@ -1240,6 +1240,9 @@ span.group-pending {
 .preview img { 
 	max-width: 100%;
 }
+.firefox .preview img {
+	width: 100%;
+}
 
 
 
